# opensim-jam

./: .gitignore  CMakeLists.txt  README.md  update_jam_release.cmd  update_jam_release_centos6.sh  update_jam_release_centos7.sh  update_jam_release_win.cmd
documentation/: visualizing-models-and-simulation-results.md  visualizing-simulation-results.md  visualizing-simulations-in-paraview.md
documentation/doxygen/: Doxyfile.in  test_Doxyfile.in
documentation/figures/comak/: COMAK_figures.pptx
documentation/figures/contact/: combined_tibia_femur_cartilage.stl  max_proximity_error.pvsm
examples/forsim/ie_laxity/settings/: generate_ie_laxity_input_files.m
examples/forsim/passive_flexion/: run_forsim.cmd
examples/forsim/passive_flexion/settings/: forsim_settings.xml  generate_passive_flexion_input_files.m  joint_mechanics_settings.xml  knee_flexion.sto
examples/joint-mechanics/visualize_measured_joint_kinematics/: run_joint-mechanics.cmd
examples/joint-mechanics/visualize_measured_joint_kinematics/results/: fluoro_contact_femurMesh_dynamic_ground_ground_0.vtp  fluoro_contact_femurMesh_dynamic_ground_ground_1.vtp  fluoro_contact_femurMesh_dynamic_ground_ground_2.vtp  fluoro_contact_femurMesh_dynamic_ground_ground_3.vtp  fluoro_contact_femurMesh_dynamic_ground_ground_4.vtp  fluoro_contact_femurMesh_dynamic_ground_ground_5.vtp  fluoro_contact_femurMesh_dynamic_ground_ground_6.vtp  fluoro_contact_patellaMesh_dynamic_ground_ground_0.vtp  fluoro_contact_patellaMesh_dynamic_ground_ground_1.vtp  fluoro_contact_patellaMesh_dynamic_ground_ground_2.vtp  fluoro_contact_patellaMesh_dynamic_ground_ground_3.vtp  fluoro_contact_patellaMesh_dynamic_ground_ground_4.vtp  fluoro_contact_patellaMesh_dynamic_ground_ground_5.vtp  fluoro_contact_patellaMesh_dynamic_ground_ground_6.vtp  fluoro_contact_tibiaMesh_dynamic_ground_ground_0.vtp  fluoro_contact_tibiaMesh_dynamic_ground_ground_1.vtp  fluoro_contact_tibiaMesh_dynamic_ground_ground_2.vtp  fluoro_contact_tibiaMesh_dynamic_ground_ground_3.vtp  fluoro_contact_tibiaMesh_dynamic_ground_ground_4.vtp  fluoro_contact_tibiaMesh_dynamic_ground_ground_5.vtp  fluoro_contact_tibiaMesh_dynamic_ground_ground_6.vtp
examples/joint-mechanics/visualize_measured_joint_kinematics/settings/: fluoro_kinematics.mot  joint_mechanics_settings.xml
install/cmd_tools/: forsim
models/lenhart2015/: lenhart2015.osim  lenhart2015_markers.xml
models/lenhart2015/motion_data/: Y9_100_1_grf.mot  Y9_walking_static1.trc
models/lenhart2015/motion_data/prep/: filter_ext_loads.m  overground_17.forces  static1.trc
models/lenhart2015/scale_generic_model/: lenhart2015_scaled_no_marker_movement.osim  lenhart2015_unscaled.osim  lenhart2015_unscaled_markers.xml  run_scale.cmd  scale_factors.xml  scale_settings.xml  static1.mot
models/lenhart2015/scale_generic_model/Geometry/: femur_l.vtp  index_medial_rvs.vtp  metacarpal3_rvs.vtp  ring_proximal_rvs.vtp  thumb_distal_rvs.vtp  tibia_l.vtp
opensim-jam-distribute/: README.md  update_jam_distribute.cmd
opensim-jam-distribute/examples/anterior_laxity/: README.md  run_anterior_laxity.cmd
opensim-jam-distribute/examples/isometric_extension/: README.md  run_isometric_extension.cmd
opensim-jam-distribute/examples/passive_flexion/: README.md  run_passive_flexion.cmd
opensim-jam-distribute/examples/quadriceps_load/: README.md  run_quadriceps_load.cmd
opensim-jam-distribute/examples/visualize_kinematics/: README.md  run_visualize_kinematics.cmd
opensim-jam-distribute/examples/walking/: run_walking.cmd
opensim-jam-distribute/models/lenhart2015/: lenhart2015.osim  lenhart2015_alta.osim  lenhart2015_alta_PTA_baja.osim  lenhart2015_alta_PTA_normal.osim  lenhart2015_markers.xml  lenhart2015_test.osim
opensim-jam-release/: README.md
opensim-jam-release-linux/examples/anterior_laxity/: run_anterior_laxity.sh
opensim-jam-release-linux/examples/passive_flexion/: run_passive_flexion.sh
opensim-jam-release-linux/examples/visualize_kinematics/: run_visualize_kinematics.sh
opensim-jam-release-windows/: README.md
opensim-jam-release-windows/documentation/: references.md
opensim-jam-release-windows/examples/walking/: run_walking.cmd
opensim-jam-release-windows/models/cams/: cams_Mplus_right_contact.osim
opensim-jam-release-windows/models/lenhart2015/: lenhart2015_acld.osim
opensim-jam-release/documentation/: building-opensim-jam-from-source.md  references.md  visualizing-models-and-simulation-results.md  visualizing-simulation-results.md
opensim-jam-release/examples/anterior_laxity/: README.md  run_anterior_laxity.cmd  run_anterior_laxity.sh
opensim-jam-release/examples/isometric_extension/: README.md  run_isometric_extension.cmd
opensim-jam-release/examples/passive_flexion/: README.md  run_passive_flexion.cmd
opensim-jam-release/examples/passive_flexion_meniscus/: run_passive_flexion_meniscus.cmd
opensim-jam-release/examples/visualize_kinematics/: README.md  run_visualize_kinematics.cmd
opensim-jam-release/examples/walking/: README.md  run_walking.cmd  run_walking.sh
opensim-jam-release/models/lenhart2015/: lenhart2015.osim  lenhart2015_acld.osim  lenhart2015_alta.osim  lenhart2015_alta_PTA_baja.osim  lenhart2015_alta_PTA_normal.osim
src/: Blankevoort1991Ligament.cpp  Blankevoort1991Ligament.h  CMakeLists.txt  COMAKInverseKinematicsTool.cpp  COMAKInverseKinematicsTool.h  COMAKTarget.cpp  COMAKTarget.h  COMAKTool.cpp  COMAKTool.h  ForsimTool.cpp  ForsimTool.h  H5FileAdapter.cpp  H5FileAdapter.h  JointMechanicsTool.cpp  JointMechanicsTool.h  RegisterTypes_osimPlugin.cpp  Smith2018ArticularContactForce.cpp  Smith2018ArticularContactForce.h  Smith2018ContactMesh.cpp  Smith2018ContactMesh.h  VTPFileAdapter.cpp  VTPFileAdapter.h
src/cmd_tools/comak/: COMAK_EXE.cpp
src/cmd_tools/comak-inverse-kinematics/: CMakeLists.txt  COMAK_INVERSE_KINEMATICS_EXE.cpp  COMAK_INVERSE_KINEMATICS_EXE.h
src/cmd_tools/forsim/: Forsim_EXE.cpp
src/cmd_tools/joint-mechanics/: CMakeLists.txt  Joint_Mechanics_EXE.cpp
src/dev_tools/: CMakeLists.txt
src/dev_tools/helper_functions/: HelperFunctions.cpp  HelperFunctions.h
(+615 files in other folders)
